Fix Progress spinner - Disable other components during his visibility #119

--- a/src/app/views/user/user-login/user-login.component.css
+++ b/src/app/views/user/user-login/user-login.component.css
@@ -11,12 +11,12 @@ mat-form-field {
 }
 
 .loading-indicator {
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
-  grid-row: 1;
+  /* grid-row: 1;
   grid-column-start: 2;
-  grid-column-end: 2;
+  grid-column-end: 2; */
 }
 
 .space {
